<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:text="@string/main_share"
        android:id="@+id/btn_share"
        android:visibility="gone"
        android:textSize="@dimen/text_size"
        android:backgroundTint="@color/orange"
       android:layout_marginTop="@dimen/margin_32"
        app:cornerRadius="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="@dimen/margin_0"
        android:layout_height="@dimen/margin_0"
        android:layout_marginEnd="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_12"
        android:gravity="end|bottom"
        android:text="@string/main_null"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_2x"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_clear"
                style="@style/Button.button1"
                android:backgroundTint="@color/light_gray"
                android:onClick="onClickOption"
                android:text="@string/main_clear"
                android:textColor="@color/black" />

            <Button
                style="@style/Button.button1"
                android:layout_marginHorizontal="@dimen/margin"
                android:backgroundTint="@color/light_gray"
                android:text="@string/main_umno_del"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_percent"
                style="@style/Button.button1"
                android:layout_marginEnd="@dimen/margin"
                android:backgroundTint="@color/light_gray"
                android:onClick="onClickOption"
                android:text="@string/percent"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_division"
                style="@style/Button.button1"
                android:backgroundTint="@color/orange"
                android:onClick="onClickOption"
                android:text="@string/main_delenie"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_seven"
                style="@style/Button.button1"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_seven" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/Button.button1"
                android:layout_marginHorizontal="@dimen/margin"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_eight" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/Button.button1"
                android:layout_marginEnd="@dimen/margin"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_nine" />

            <Button
                android:id="@+id/btn_multiplication"
                style="@style/Button.button1"
                android:backgroundTint="@color/orange"
                android:onClick="onClickOption"
                android:text="@string/main_umno"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_four"
                style="@style/Button.button1"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_four" />

            <Button
                android:id="@+id/btn_five"
                style="@style/Button.button1"
                android:layout_marginHorizontal="@dimen/margin"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_five" />

            <Button
                android:id="@+id/btn_six"
                style="@style/Button.button1"
                android:layout_marginEnd="@dimen/margin"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_six" />

            <Button
                android:id="@+id/btn_minus"
                style="@style/Button.button1"
                android:backgroundTint="@color/orange"
                android:onClick="onClickOption"
                android:text="@string/main_minus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_one"
                style="@style/Button.button1"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_one" />

            <Button
                android:id="@+id/btn_two"
                style="@style/Button.button1"
                android:layout_marginHorizontal="@dimen/margin"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_two" />

            <Button
                android:id="@+id/btn_three"
                style="@style/Button.button1"
                android:layout_marginEnd="@dimen/margin"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:text="@string/main_three" />

            <Button
                android:id="@+id/btn_plus"
                style="@style/Button.button1"
                android:backgroundTint="@color/orange"
                android:onClick="onClickOption"
                android:text="@string/main_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_null"
                style="@style/Button.button1"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="onClickNumber"
                android:paddingStart="@dimen/margin_32"
                android:text="@string/main_null"
                android:textAlignment="viewStart"
                tools:ignore="RtlSymmetry"/>

            <Button
                android:id="@+id/btn_dot"
                style="@style/Button.button1"
                android:layout_marginHorizontal="@dimen/margin"
                android:backgroundTint="@color/gray"
                android:text="@string/main_dot"/>
            <Button
                android:id="@+id/btn_equals"
                style="@style/Button.button1"
                android:backgroundTint="@color/orange"
                android:onClick="onClickOption"
                android:text="@string/main_equals" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>